<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/gps_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_gps_status"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/gps_status_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="AVAILABLE" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lat_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="37.58086861769882" />

            <View
                android:layout_width="12dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/lng_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="127.03262410784464" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/step_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_bar"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/step_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/init_step_number"
            android:textColor="#000000"
            android:textSize="50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/step"
            android:textColor="#000000"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="8dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/step_counter_start_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/step_counter_start"
            android:textColor="#FFFFFF" />

        <View
            android:layout_width="8dp"
            android:layout_height="match_parent" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/step_counter_reset_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/step_counter_reset"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/step_layout"
        android:layout_below="@id/gps_layout">

        <FrameLayout
            android:id="@+id/map_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/map_pin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_location_on_black_24dp"
                android:visibility="invisible" />
        </FrameLayout>
    </FrameLayout>
</RelativeLayout>